--- a/renhongl-blog/_config.yml
+++ b/renhongl-blog/_config.yml
@@ -90,9 +90,16 @@ exclude_generator:
 #  type: git
 #  repository: git@github.com:litten/litten.github.com.git
 #  branch: master
+# deploy:
+#   type: git
+#   repo: git@github.com:renhongl/renhongl.github.io.git
+#   branch: master
+
+# 修改后
 deploy:
   type: git
-  repo: git@github.com:renhongl/renhongl.github.io.git
+  # 下方的gh_token会被.travis.yml中sed命令替换
+  repo: https://gh_token@github.com/renhongl/renhongl.github.io.git
   branch: master
 
 search:
