--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: node_js
 node_js:
-- 6.0.0
-# branches:
-#   only:
-#   - source
+  - "stable"
 
 install: npm install
 
 before_script:
-- git config --global user.name "renhongl"
-- git config --global user.email "1075220132@qq.com"
-- sed -i "s/__GITHUB_TOKEN__/${token}/" _config.yml
+  - git config --global user.name "renhongl"
+  - git config --global user.email "1075220132@qq.com"
+  - sed -i "s/__GITHUB_TOKEN__/${token}/" _config.yml
 
 script: npm run build
