--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 柚子
-subtitle: 如果你今天对自己满意，明天就会被淘汰。
-description: 对于技术：如果你今天对自己满意，明天就会被淘汰。对于生活：不以物喜，不以己悲。
+subtitle: 
+description: 
 author: 柚子
 email: 1075220132@qq.com
 keywords: "前端,js,nodejs,electron,jquery,javascript,html5,开发者,程序猿,极客,编程,代码,开源,IT网站,Developer,Programmer,Coder,html,css,css3,用户体验"
