--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -2,16 +2,16 @@
     {
        "name":"AiTing",
        "url":"https://github.com/renhongl/aiting",
-       "desc":"一个使用web技术开发的桌面音乐播放器。"
+       "desc":"HTML5客户端音乐播放器"
     },
     {
        "name":"AiLiao",
        "url":"https://github.com/renhongl/ailiao",
-       "desc":"使用Javascirpt和nodejs开发的网页聊天软件。"
+       "desc":"网页聊天软件"
     },
     {
-        "name":"JianShu",
-        "url":"https://github.com/renhongl/jianshu-mofang",
-        "desc":"使用react和redux模仿简书。"
+        "name":"Pomelo Editor",
+        "url":"https://renhongl.github.io/markdown-editor/",
+        "desc":"功能强大的在线Markdown编辑器"
      }
 ]
