--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: 1075220132@qq.com
 keywords: "前端,js,nodejs,electron,jquery,javascript,html5,开发者,程序猿,极客,编程,代码,开源,IT网站,Developer,Programmer,Coder,html,css,css3,用户体验, angular, react, editor, markdown, online"
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://github.com/renhongl/
+url: https://renhongl.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
