--- a/themes/xoxo-plus/_config.yml
+++ b/themes/xoxo-plus/_config.yml
@@ -57,6 +57,9 @@ links:
 
 # project
 projects:
+  Online JSON Editor:
+    url: https://renhongl.github.io/json-editor/
+    descript: JSON在线编辑器
   Online Javascript Editor:
     url: https://renhongl.github.io/code-online/
     descript: 优美简洁的JS在线编辑器
